// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when currentStep === step1 1`] = `
<div>
  <div
    className="card"
  >
    <div
      className="card-info card-header"
    >
      <div
        className="sc-bdVaJa XEKZg"
      >
        <a
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          Step 
          1
           
          My step 1
        </a>
        <span
          className="pull-right"
        >
          <button
            className="sc-bwzfXH hmVdDi btn btn-secondary"
            onClick={[Function]}
            type="button"
          >
            Skip
          </button>
        </span>
      </div>
    </div>
    <div
      className="collapse show"
      style={Object {}}
    >
      <div
        className="card-body"
      >
        <div>
          <p>
            My step 1 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-default card-header"
    >
      <div
        className="sc-bdVaJa jONfBd"
      >
        <a
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          Step 
          2
           
          My step 2
        </a>
      </div>
    </div>
    <div
      className="collapse"
      style={Object {}}
    >
      <div
        className="card-body"
      >
        <div>
          <p>
            My step 2 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-default card-header"
    >
      <div
        className="sc-bdVaJa jONfBd"
      >
        <a
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          Step 
          3
           
          My step 3
        </a>
      </div>
    </div>
    <div
      className="collapse"
      style={Object {}}
    >
      <div
        className="card-body"
      >
        <div>
          <p>
            My step 3 description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when currentStep === step2 1`] = `
<div>
  <div
    className="card"
  >
    <div
      className="card-success card-header"
    >
      <div
        className="sc-bdVaJa XEKZg"
      >
        <a
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          Step 
          1
           
          My step 1
        </a>
      </div>
    </div>
    <div
      className="collapse"
      style={Object {}}
    >
      <div
        className="card-body"
      >
        <div>
          <p>
            My step 1 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-info card-header"
    >
      <div
        className="sc-bdVaJa XEKZg"
      >
        <a
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          Step 
          2
           
          My step 2
        </a>
        <span
          className="pull-right"
        >
          <button
            className="sc-bwzfXH hmVdDi btn btn-secondary"
            onClick={[Function]}
            type="button"
          >
            Skip
          </button>
        </span>
      </div>
    </div>
    <div
      className="collapse show"
      style={Object {}}
    >
      <div
        className="card-body"
      >
        <div>
          <p>
            My step 2 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-default card-header"
    >
      <div
        className="sc-bdVaJa jONfBd"
      >
        <a
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          Step 
          3
           
          My step 3
        </a>
      </div>
    </div>
    <div
      className="collapse"
      style={Object {}}
    >
      <div
        className="card-body"
      >
        <div>
          <p>
            My step 3 description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when currentStep === step3 1`] = `
<div>
  <div
    className="card"
  >
    <div
      className="card-success card-header"
    >
      <div
        className="sc-bdVaJa XEKZg"
      >
        <a
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          Step 
          1
           
          My step 1
        </a>
      </div>
    </div>
    <div
      className="collapse"
      style={Object {}}
    >
      <div
        className="card-body"
      >
        <div>
          <p>
            My step 1 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-success card-header"
    >
      <div
        className="sc-bdVaJa XEKZg"
      >
        <a
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          Step 
          2
           
          My step 2
        </a>
      </div>
    </div>
    <div
      className="collapse"
      style={Object {}}
    >
      <div
        className="card-body"
      >
        <div>
          <p>
            My step 2 description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="card"
  >
    <div
      className="card-info card-header"
    >
      <div
        className="sc-bdVaJa XEKZg"
      >
        <a
          onClick={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          Step 
          3
           
          My step 3
        </a>
      </div>
    </div>
    <div
      className="collapse show"
      style={Object {}}
    >
      <div
        className="card-body"
      >
        <div>
          <p>
            My step 3 description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
